@@ -1369,6 +1369,7 @@ Pauli Virtanen
 Frank Visser
 Johannes Vogel
 Alex Volkov
+Guido Vranken
 Martijn Vries
 Sjoerd de Vries
 Niki W. Waibel
