@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Fix arbitrary memory access in JSONDecoder.raw_decode with a negative second
+  parameter. Bug reported by Guido Vranken.
+
 - Issue #21172: isinstance check relaxed from dict to collections.Mapping.
 
 - Issue #21191: In os.fdopen, alwyas close the file descriptor when an exception
